@@ -63,6 +63,26 @@ begin_import
 import|import
 name|java
 operator|.
+name|net
+operator|.
+name|URI
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|net
+operator|.
+name|URISyntaxException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|ArrayList
@@ -1434,6 +1454,103 @@ operator|.
 name|class
 argument_list|)
 return|;
+block|}
+specifier|protected
+specifier|static
+name|partitionDesc
+name|getPartitionDescFromPath
+parameter_list|(
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|partitionDesc
+argument_list|>
+name|pathToPartitionInfo
+parameter_list|,
+name|Path
+name|dir
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+comment|// The format of the keys in pathToPartitionInfo sometimes contains a port
+comment|// and sometimes doesn't, so we just compare paths.
+for|for
+control|(
+name|Map
+operator|.
+name|Entry
+argument_list|<
+name|String
+argument_list|,
+name|partitionDesc
+argument_list|>
+name|entry
+range|:
+name|pathToPartitionInfo
+operator|.
+name|entrySet
+argument_list|()
+control|)
+block|{
+try|try
+block|{
+if|if
+condition|(
+operator|new
+name|URI
+argument_list|(
+name|entry
+operator|.
+name|getKey
+argument_list|()
+argument_list|)
+operator|.
+name|getPath
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+name|dir
+operator|.
+name|toUri
+argument_list|()
+operator|.
+name|getPath
+argument_list|()
+argument_list|)
+condition|)
+block|{
+return|return
+name|entry
+operator|.
+name|getValue
+argument_list|()
+return|;
+block|}
+block|}
+catch|catch
+parameter_list|(
+name|URISyntaxException
+name|e2
+parameter_list|)
+block|{}
+block|}
+throw|throw
+operator|new
+name|IOException
+argument_list|(
+literal|"cannot find dir = "
+operator|+
+name|dir
+operator|.
+name|toString
+argument_list|()
+operator|+
+literal|" in partToPartitionInfo!"
+argument_list|)
+throw|;
 block|}
 specifier|static
 class|class
